Dummy Issue tiles
Dummy Issue tiles

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 					<!-- COVER -->
 					<li><img src="images/preview-taq-solstice-2013.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
 					<!-- Catskills -->
-					<li><a href="catskills/index.html"><img src="images/preview-catskills.jpg" /><div class="catskills"></div></a></li>
+					<li><a href="catskills/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- Nootka -->
-					<li><a href="nootka/index.html"><img src="images/preview-nootka.jpg" /><div class="nootka"></div></a></li>
+					<li><a href="nootka/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- Kahala -->
-					<li><a href="kohala/index.html"><img src="images/preview-kahala.jpg" /><div class="kahala"></div></a></li>
+					<li><a href="kohala/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- PLACE -->
-					<li><a href="place/solstice2013/index.html"><img src="images/preview-place-solstice-2013.jpg" /><div class="place"></div></a></li>
+					<li><a href="place/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- PORTRAITS -->
-					<li><a href="portraits/solstice2013/index.html"><img src="images/preview-portraits-solstice-2013.jpg" /><div class="portraits"></div></a></li>
+					<li><a href="portraits/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 				</ul>
 			</section>
 		</div>
