--- a/index-WIP.html
+++ b/index-WIP.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -25,8 +26,31 @@
 					<p class="preorder_btn"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">go get it</a></p>
 				</div>
 		</div>
-		<!-- START SOLSTICE -->
+		<!-- START AIR2014 -->
 		<div id="container" class="container">
+			<section>
+				<ul class="da-thumbs">
+					<!-- COVER -->
+					<li><img src="images/preview-taq-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
+					<!-- Catskills -->
+					<li><a href="catskills/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- Nootka -->
+					<li><a href="nootka/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- Kahala -->
+					<li><a href="kohala/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- PLACE -->
+					<li><a href="place/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- PORTRAITS -->
+					<li><a href="portraits/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+				</ul>
+			</section>
+		</div>
+		<div id="dots">
+			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
+		</div>
+		<!-- END AIR2014 -->
+        <!-- START SOLSTICE -->
+		<div id="container" class="container" style="margin-top:7em; border-top: solid 2px #fff">
 			<section>
 				<ul class="da-thumbs">
 					<!-- COVER -->
@@ -52,6 +76,7 @@
 			<div class="dotLayout"><div id="forageSaltPoint" class="dot">forage</div></div>
 		</div>
 		<!-- END SOLSTICE -->
+        
 		<!-- START SUMMER -->
 		<div id="container" class="container" style="margin-top:7em; border-top: solid 2px #fff">
 			<section>
