--- a/index-2015-0504.html
+++ b/index-2015-0504.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -13,7 +12,7 @@
 	  <link rel="shortcut icon" href="images/favicon.png">
 	  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	  <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-	  <link rel="stylesheet" type="text/css" href="css/sections.css" />
+	  <link rel="stylesheet" type="text/css" href="css/sections-solstice.css" />
 	  <link rel="stylesheet" href="css/socialbuttons.css" />
 	  <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -26,31 +25,8 @@
 					<p class="preorder_btn"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">go get it</a></p>
 				</div>
 		</div>
-		<!-- START AIR2014 -->
+		<!-- START SOLSTICE -->
 		<div id="container" class="container">
-			<section>
-				<ul class="da-thumbs">
-					<!-- COVER -->
-					<li><img src="images/preview-taq-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
-					<!-- Catskills -->
-					<li><a href="catskills/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-					<!-- Nootka -->
-					<li><a href="nootka/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-					<!-- Kahala -->
-					<li><a href="kohala/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-					<!-- PLACE -->
-					<li><a href="place/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-					<!-- PORTRAITS -->
-					<li><a href="portraits/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-				</ul>
-			</section>
-		</div>
-		<div id="dots">
-			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
-		</div>
-		<!-- END AIR2014 -->
-        <!-- START SOLSTICE -->
-		<div id="container" class="container" style="margin-top:7em; border-top: solid 2px #fff">
 			<section>
 				<ul class="da-thumbs">
 					<!-- COVER -->
@@ -76,7 +52,6 @@
 			<div class="dotLayout"><div id="forageSaltPoint" class="dot">forage</div></div>
 		</div>
 		<!-- END SOLSTICE -->
-        
 		<!-- START SUMMER -->
 		<div id="container" class="container" style="margin-top:7em; border-top: solid 2px #fff">
 			<section>
