new dot story bridgeport work in progress

--- a/hotsprings/bridgeport/index.html
+++ b/hotsprings/bridgeport/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tiny Atlas Quarterly | Beauty: Fort Greene, New York</title>
+        <title>Tiny Atlas Quarterly | Hotsprings: Bridgeport, California</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -269,10 +269,11 @@
                         <!-- | -->
 						<div class="pg-credits-box">
 						<span class="pg-contributor">Do</span>
- 						<br /><a href="http://Felizbrooklyn.blogspot.com" target="_blank">Mono Lake</a>
-                        <br /><a href="http://Frenchgarmentcleaners.com" target="_blank">French Garment Cleaners</a>
-                        <br /><a href="http://Greengrape.com" target="_blank">The Greene Grape</a>, provisions
-                        <br /><a href="http://Greenlightbookstore.com" target="_blank">Green Light Book Shop</a>
+ 						<br /><a href="http://www.monolake.org/" target="_blank">Mono Lake</a>
+                        <br /><a href="http://www.yelp.com/biz/travertine-hot-spring-bridgeport" target="_blank">Travertine Hot Springs, Bridgeport, CA</a>
+                        <br /><a href="http://www.yelp.com/biz/wild-willys-hot-spring-mammoth-lakes" target="_blank">Wild Willy&#8217;s Hot Springs, Mammoth Lakes, CA</a>, provisions
+                        <br /><a href="http://www.crowleylakefishcamp.com/" target="_blank">Crowley Lake</a>
+                        <br /><a href="http://www.virginialakesresort.com" target="_blank">Virginia Lakes</a>
 						</div>
 
                             
@@ -305,8 +306,7 @@
 			pgPages[7] = "page-8";
 			pgPages[8] = "page-9";
 			pgPages[9] = "page-10";
-			pgPages[10] = "page-11";
-			pgPages[11] = "page-resources";
+			pgPages[10] = "page-resources";
 			var pageCount = 0;
 			var pageNext;
 			$('#pg-pageUp').bind('click', function() {
