new dot story hong kong work in progress

--- a/hotsprings/bridgeport/index.html
+++ b/hotsprings/bridgeport/index.html
@@ -255,7 +255,7 @@
                         <!-- | -->
 						<div class="pg-credits-box">
 						<span class="pg-contributor">Stay</span>
- 						<br /><a href="http://www.virginacreeksettlement.com" target="_blank">Virgina Creek Settlement </a>
+ 						<br /><a href="http://www.virginiacreeksettlement.com" target="_blank">Virgina Creek Settlement</a>
                         <br /><a href="http://www.bishopcreeksideinn.com/" target="_blank">The Creekside Inn, Bishop, CA</a>
 						</div>
                         
@@ -271,7 +271,7 @@
 						<span class="pg-contributor">Do</span>
  						<br /><a href="http://www.monolake.org/" target="_blank">Mono Lake</a>
                         <br /><a href="http://www.yelp.com/biz/travertine-hot-spring-bridgeport" target="_blank">Travertine Hot Springs, Bridgeport, CA</a>
-                        <br /><a href="http://www.yelp.com/biz/wild-willys-hot-spring-mammoth-lakes" target="_blank">Wild Willy&#8217;s Hot Springs, Mammoth Lakes, CA</a>, provisions
+                        <br /><a href="http://www.yelp.com/biz/wild-willys-hot-spring-mammoth-lakes" target="_blank">Wild Willy&#8217;s Hot Springs, Mammoth Lakes, CA</a>
                         <br /><a href="http://www.crowleylakefishcamp.com/" target="_blank">Crowley Lake</a>
                         <br /><a href="http://www.virginialakesresort.com" target="_blank">Virginia Lakes</a>
 						</div>
