--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <title>Welcome to Tiny Atlas Quarterly</title>
+	  <title>Welcome to Tiny Atlas Quarterly | Air, 2014</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="apple-mobile-web-app-capable" content="yes" />
 	  <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there." />
@@ -47,6 +47,7 @@
 		</div>
 		<div id="dots">
 			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
+            <div class="dotLayout"><div id="travellogHongKong" class="dot">travel log</div></div>
 		</div>
 		<!-- END AIR2014 -->
         <!-- START SOLSTICE -->
