--- a/index.html
+++ b/index.html
@@ -31,23 +31,28 @@
 			<section>
 				<ul class="da-thumbs">
 					<!-- COVER -->
-					<li><img src="images/preview-taq-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
+					<li><img src="images/tiny-atlas-cover-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
 					<!-- Catskills -->
-					<li><a href="catskills/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="banff/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- Nootka -->
-					<li><a href="nootka/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="barcelona/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- Kahala -->
-					<li><a href="kohala/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="maui/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- PLACE -->
-					<li><a href="place/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="place/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- PORTRAITS -->
-					<li><a href="portraits/solstice2013/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="portraits/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 				</ul>
 			</section>
 		</div>
 		<div id="dots">
-			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
+        	<div class="dotLayout"><div id="surfElSalvador" class="dot">surf</div></div>
+            <div class="dotLayout"><div id="familyTravelNicaragua" class="dot">family</div></div>
             <div class="dotLayout"><div id="travellogHongKong" class="dot">travel log</div></div>
+            <div class="dotLayout"><div id="workshopJaipur" class="dot">workshop</div></div>
+			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
+            
+            
 		</div>
 		<!-- END AIR2014 -->
         <!-- START SOLSTICE -->
