--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <title>Welcome to Tiny Atlas Quarterly</title>
+	  <title>Welcome to Tiny Atlas Quarterly | Air, 2014</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="apple-mobile-web-app-capable" content="yes" />
 	  <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there." />
@@ -26,9 +26,37 @@
 					<p class="preorder_btn"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">go get it</a></p>
 				</div>
 		</div>
-		
-        <!-- START SOLSTICE -->
+		<!-- START AIR2014 -->
 		<div id="container" class="container">
+			<section>
+				<ul class="da-thumbs">
+					<!-- COVER -->
+					<li><img src="images/tiny-atlas-cover-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
+					<!-- BANFF -->
+					<li><a href="banff/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- BARCELONA -->
+					<li><a href="barcelona/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- MAUI -->
+					<li><a href="maui/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- PLACE -->
+					<li><a href="place/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<!-- PORTRAITS -->
+					<li><a href="portraits/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+				</ul>
+			</section>
+		</div>
+		<div id="dots">
+        	<div class="dotLayout"><div id="surfElSalvador" class="dot">surf</div></div>
+            <div class="dotLayout"><div id="familyTravelNicaragua" class="dot">family</div></div>
+            <div class="dotLayout"><div id="travellogHongKong" class="dot">travel log</div></div>
+            <div class="dotLayout"><div id="workshopJaipur" class="dot">workshop</div></div>
+			<div class="dotLayout"><div id="hotspringsBridgeport" class="dot">hot springs</div></div>
+            
+            
+		</div>
+		<!-- END AIR2014 -->
+        <!-- START SOLSTICE -->
+		<div id="container" class="container" style="margin-top:7em; border-top: solid 2px #fff">
 			<section>
 				<ul class="da-thumbs">
 					<!-- COVER -->
