--- a/place/air2014/index.html
+++ b/place/air2014/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tiny Atlas Quarterly | Portraits, Spring 2013</title>
+        <title>Tiny Atlas Quarterly | Place, Air 2014</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
