--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 		<meta charset="UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <title>Welcome to Tiny Atlas Quarterly | Air, 2014</title>
+	  <title>Welcome to Tiny Atlas Quarterly</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="apple-mobile-web-app-capable" content="yes" />
 	  <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there." />
@@ -39,9 +39,9 @@
 					<!-- MAUI -->
 					<li><a href="maui/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
 					<!-- PLACE -->
-					<li><a href="place/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="place/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="place"></div></a></li>
 					<!-- PORTRAITS -->
-					<li><a href="portraits/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="portraits/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="portraits"></div></a></li>
 				</ul>
 			</section>
 		</div>
