--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
 			<section>
 				<ul class="da-thumbs">
 					<!-- COVER -->
-					<li><img src="images/tiny-atlas-cover-air-2014.jpg" style="display:block;width:100%"/><div class="montana"></div></li>
+					<li><img src="images/tiny-atlas-cover-air-2014.jpg" style="display:block;width:100%"/></li>
+                    <!-- BARCELONA -->
+					<li><a href="barcelona/index.html"><img src="images/preview-barcelona.jpg" /><div class="barcelona"></div></a></li>
 					<!-- BANFF -->
-					<li><a href="banff/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
-					<!-- BARCELONA -->
-					<li><a href="barcelona/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="banff/index.html"><img src="images/preview-banff.jpg" /><div class="banff"></div></a></li>
+					
 					<!-- MAUI -->
-					<li><a href="maui/index.html"><img src="images/preview-dummy.jpg" /><div class="blank"></div></a></li>
+					<li><a href="maui/index.html"><img src="images/preview-maui.jpg" /><div class="maui"></div></a></li>
 					<!-- PLACE -->
-					<li><a href="place/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="place"></div></a></li>
+					<li><a href="place/air2014/index.html"><img src="images/preview-place-air-2014.jpg" /><div class="place"></div></a></li>
 					<!-- PORTRAITS -->
-					<li><a href="portraits/air2014/index.html"><img src="images/preview-dummy.jpg" /><div class="portraits"></div></a></li>
+					<li><a href="portraits/air2014/index.html"><img src="images/preview-portraits-air-2014.jpg" /><div class="portraits"></div></a></li>
 				</ul>
 			</section>
 		</div>
