--- a/familytravel/nicaragua/index.html
+++ b/familytravel/nicaragua/index.html
@@ -306,7 +306,7 @@
               <div class="pg-credits-box">
                 <span class="pg-contributor">Eat</span>
                 <br /><a href="https://www.facebook.com/pages/The-Garden-Cafe/155224124538511" target="_blank">The Garden Caf&eacute;, Granada, Nicaragua</a>
-                <br /><a href="http://www.sanjuansurf.com" target="_blank">El Colibri Mediterranean Restaurant</a>
+                <br /><a href="http://www.sanjuansurf.com/eating-out.html" target="_blank">El Colibri Mediterranean Restaurant</a>
                 
                 
 
