--- a/hotsprings/bridgeport/index.html
+++ b/hotsprings/bridgeport/index.html
@@ -272,8 +272,8 @@
  						<br /><a href="http://www.monolake.org/" target="_blank">Mono Lake</a>
                         <br /><a href="http://www.yelp.com/biz/travertine-hot-spring-bridgeport" target="_blank">Travertine Hot Springs, Bridgeport, CA</a>
                         <br /><a href="http://www.yelp.com/biz/wild-willys-hot-spring-mammoth-lakes" target="_blank">Wild Willy&#8217;s Hot Springs, Mammoth Lakes, CA</a>
-                        <br /><a href="http://www.crowleylakefishcamp.com/" target="_blank">Crowley Lake</a>
-                        <br /><a href="http://www.virginialakesresort.com" target="_blank">Virginia Lakes</a>
+                        <br /><a href="http://www.crowleylakefishcamp.com/" target="_blank">Crowley Lake Fish Camp</a>
+                        <br /><a href="http://www.virginia.org/virginialakes/" target="_blank">Virginia Lakes</a>
 						</div>
 
                             
