--- a/workshop/jaipur/index.html
+++ b/workshop/jaipur/index.html
@@ -360,7 +360,7 @@
                    <!-- Contributors ------------------------------------->
                    <!-- | -->
                    <div class="pg-credits-box">
-                   <span class="pg-contributor">Photographer</span>
+                   <span class="pg-contributor">Photographer and Writer</span>
                    <br /><a href="http://www.mariannajamadi.com/" target="_blank">Marianna Jamadi</a>
                    </div>
                    
