barcelona tweaks logo move

--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@ Editor In Chief</span></p>
                
            </div><!-- end wrapper div -->
            		<!-- NAV -->
-          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div></div>
+          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
            </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
           
