--- a/portraits/summer2013/index.html
+++ b/portraits/summer2013/index.html
@@ -35,7 +35,7 @@
             <div class="pg-nav"><span id="pg-pageDown" class="pg-prev"></span><span id="pg-pageUp" class="pg-next"></span></div>
             <!-- SITE NAVIGATION ------------------------------------------------------------->
           <footer id="nav-holder">
-                <div id="nav"><a href="../../index.html"><img src="../../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div>
+                <div id="nav"><a href="../../index.html"><img src="../../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div>
         	</footer> 
             
             <!-- PAGE 1 ------------------------------------------------------------->
