--- a/southernland/index.html
+++ b/southernland/index.html
@@ -479,7 +479,7 @@ Stock up on sweet tea and Topo Chico.</span></p></div>
                
            </div><!-- end wrapper div -->
            		<!-- NAV -->
-          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div></div>
+          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
            </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
 
