--- a/catskills/index.html
+++ b/catskills/index.html
@@ -34,7 +34,7 @@
 <body>
             <!-- PAGE NAVIGATION ------------------------------------------------------------->
             <div class="pg-nav"><span id="pg-pageDown" class="pg-prev"></span><span id="pg-pageUp" class="pg-next"></span></div>
-            <div style="display:none;"><img alt="" src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></div>
+            <div style="display:none;"><img alt="" src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></div>
             
             <!-- PAGE 1 ------------------------------------------------------------->
         	<!-- PAGE -->  
@@ -531,7 +531,7 @@ National Audubon Society Field Guide to North America Wildflowers.</em> Also, o
                <img src="../images/blank.png" />
            </div><!-- end wrapper div -->
            		<!-- NAV -->
-          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div></div>
+          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
            </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
         <script>
