--- a/jenner/index.html
+++ b/jenner/index.html
@@ -537,7 +537,7 @@
                
            </div><!-- end wrapper div -->
            		<!-- NAV -->
-          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div></div>
+          		<div id="nav-holder"><div id="nav"><a href="../index.html"><img src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
            </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
 
