--- a/profile/wrenn/index.html
+++ b/profile/wrenn/index.html
@@ -33,7 +33,7 @@
 <body>
             <!-- PAGE NAVIGATION ------------------------------------------------------------->
             <div class="pg-nav"><span id="pg-pageDown" class="pg-prev"></span><span id="pg-pageUp" class="pg-next"></span></div>
-            <div style="display:none;"><img alt="" src="../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></div>
+            <div style="display:none;"><img alt="" src="../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></div>
             
             <!-- PAGE 1 ------------------------------------------------------------->
         	<!-- PAGE -->  
@@ -638,7 +638,7 @@ me, but I don’t usually listen to it. I think about my kids a lot. My kids are
                <img src="../../images/blank.png" />
            </div><!-- end wrapper div -->
            		<!-- NAV -->
-          		<div id="nav-holder"><div id="nav"><a href="../../index.html"><img src="../../images/tiny-atlas-sm.png" alt="Tiny Atlas Quarterly"></a></div></div>
+          		<div id="nav-holder"><div id="nav"><a href="../../index.html"><img src="../../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
            </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
           
