--- a/about/masthead.html
+++ b/about/masthead.html
@@ -243,7 +243,7 @@
                         Emily Shur<br />
                         Abby Ross<br />
                         Anna Moller<br />
-                        Anais & Dax<br />
+                        Anais &amp; Dax<br />
                         Grant Harder<br />
                         Aya Brackett <br />
                         Mark Wickens<br />
@@ -251,7 +251,7 @@
                         Able Collective<br />
                         Erica Shires<br />
                         Meredith Heuer<br />
-                        Amanda Jasnowski<br />
+                        Sophie T. Lvoff<br />
                         Matthew Monteith<br />
                         Stephanie Noritz<br />
                         Elizabeth Weinberg<br />
