--- a/banff/index.html
+++ b/banff/index.html
@@ -231,8 +231,8 @@
                 
               <!-- box div -->  
                <div id="pg-interview"> 
-               <p>Backcountry Sledding on Spray Lake</p>
-     			<p>an account by sled-dog guide, Nicole Lewis</p>
+               <p>Backcountry Sledding on Spray Lake
+     			<br />an account by sled-dog guide, Nicole Lewis</p>
                 <p>Canmore, Alberta, Canada</p>
                <!-- INTERVIEW CONTENT -->
                <div id="pg-interview-content">
@@ -419,7 +419,7 @@
                     <!-- | -->
 					<div class="pg-credits-box">
 					<span class="pg-contributor">Stay</span>
-                    <br /><a href="http://www.fairmont.com/banff-springs/" target="_blank">Fairmot, Banff Springs</a>
+                    <br /><a href="http://www.fairmont.com/banff-springs/" target="_blank">Fairmont, Banff Springs</a>
                     <br /><a href="http://www.fairmont.com/lake-louise/" target="_blank">The Fairmont Chateau, Lake Louise</a>
  					<br /><a href="http://www.solararesort.ca" target="_blank">Solara Resort</a>
                     <br /><a href="http://castlemountain.com" target="_blank">Castle Mountain Chalets</a>
