--- a/familytravel/nicaragua/index.html
+++ b/familytravel/nicaragua/index.html
@@ -291,6 +291,12 @@
                    <span style="text-transform:uppercase">PHOTOGRAPHER</span>
                    <br /><a href="http://katherinewolkoff.com/" target="_blank">Katherine Wolkoff </a>
                  </div>
+                 
+                 <!-- | -->
+                   <div class="pg-credits-box pg-credits-box-break">
+                   <span class="pg-contributor">Contributing Designer</span>
+                   <br /><a href="http://www.lorencrosier.com" target="_blank">Loren Crosier</a>
+                   </div>
 
                  <!-------------------------------->
 
