--- a/about/masthead.html
+++ b/about/masthead.html
@@ -188,7 +188,7 @@
                        </span>
                        <br />
                        <a href="http://www.lorencrosier.com" target="_blank">
-                       Loren Crozier
+                       Loren Crosier
                        </a>
                        </div>
                        
